GET wspaces/{id}, wspaces/me 구현
- workspaceEndpoints, WorkspaceResponseBodies에서 GET wspaces/{id} 정의 및 wspaces/me 수정
- WorkspaceMemberRepository에서 WorkspaceMember 리스트를 리턴하기 위한 findByUserId 정의
- Workspace Controller, Service에서 getWorkspace, getWorkspaceUserSpace 구현
