# app/service/src/main/java/com/hasi/service/workspace/workspace/WorkspaceController.java
@@ -1,13 +1,13 @@
 package com.hasi.service.workspace.workspace;
 
 import com.hasi.collab.api.WorkspaceApi;
-import com.hasi.collab.model.WorkspaceCreateRequest;
-import com.hasi.collab.model.WorkspaceCreateResponse;
-import com.hasi.collab.model.WorkspaceData;
+import com.hasi.collab.model.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,5 +23,27 @@ public class WorkspaceController implements WorkspaceApi {
         response.setData(data);
         response.setError(null);
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
+    }
+
+    @Override
+    public ResponseEntity<WorkspaceGetResponse> getWorkspace(Long workspaceId) {
+        WorkspaceData data = workspaceService.getWorkspace(workspaceId);
+        WorkspaceGetResponse response = new WorkspaceGetResponse();
+        response.setSuccess(true);
+        response.setData(data);
+        response.setError(null);
+
+        return ResponseEntity.ok(response);
+    }
+
+    @Override
+    public ResponseEntity<WorkspaceGetUserSpaceResponse> getWorkspaceUserSpace() {
+        List<WorkspaceGetUserSpaceResponseDataInner> data = workspaceService.getWorkspaceUserSpace();
+        WorkspaceGetUserSpaceResponse response = new WorkspaceGetUserSpaceResponse();
+        response.setSuccess(true);
+        response.setData(data);
+        response.setError(null);
+
+        return ResponseEntity.ok(response);
     }
 }
