# docs/openapi/paths/workspaceEndpoints.yaml
@@ -47,10 +47,43 @@ paths:
       summary: "로그인 후 자기가 속한 워크스페이스 목록 조회, 사이드바 렌더링에 사용"
       tags:
         - Workspace
-      operationId: getWorkspaceSide
+      operationId: getWorkspaceUserSpace
       responses:
         '200':
           description: "로그인 후 자기가 속한 워크스페이스 목록 조회 성공"
+          content:
+            application/json:
+              schema:
+                $ref: "../components/WorkspaceResponseBodies.yaml#/components/schemas/WorkspaceGetUserSpaceResponse"
+        '401':
+          description: "Unauthorized, 인증되지 않은 요청"
+          content:
+            application/json:
+              schema:
+                $ref: "../components/ErrorResponseBodies.yaml#/components/schemas/Auth003Error"
+        '500':
+          description: "Internal Server Error, 서버 내부 오류"
+          content:
+            application/json:
+              schema:
+                $ref: "../components/ErrorResponseBodies.yaml#/components/schemas/Server001Error"
+         
+  /api/workspaces/{workspaceId}:
+    get:
+      summary: "단일 워크스페이스 조회"
+      tags:
+        - Workspace
+      operationId: getWorkspace
+      parameters:
+        - name: workspaceId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: "단일 워크스페이스 조회 성공"
           content:
             application/json:
               schema:
@@ -67,8 +100,6 @@ paths:
             application/json:
               schema:
                 $ref: "../components/ErrorResponseBodies.yaml#/components/schemas/Server001Error"
-         
-  /api/workspaces/{workspaceId}:
     patch:
       summary: "워크스페이스 부분 수정"
       tags:
